Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
11.2(EOL)
Description
Assertion failed: from->s->online_alter_binlog == 0 happens in the XA tests.
https://buildbot.mariadb.net/buildbot/builders/winx64-debug/builds/42854/steps/test/logs/stdio
https://buildbot.mariadb.net/buildbot/builders/winx64-debug/builds/42913/steps/test/logs/stdio
Attachments
Activity
Transition | Time In Source Status | Execution Times |
---|
|
20d 20h 41m | 1 |
|
11h 50m | 1 |
|
6s | 1 |
|
4s | 1 |
|
1m 22s | 1 |
|
58d 17h 22m | 1 |
|
1d 16h 21m | 1 |